@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.17 1999/11/21 00:17:12 tiniou Exp $
+$Id: CHANGES,v 1.18 1999/11/21 02:24:45 tiniou Exp $
 
 Changes between versions 0.4b9 and 0.4b10 (released ???????????????)
 ====================================================================
@@ -18,6 +18,16 @@ Changes between versions 0.4b9 and 0.4b10 (released ???????????????)
 3.	Made the nodump flag work on directories. A directory which
 	has the nodump flag gets never dumped, regardless of its
 	contents.
+
+4.	Integrate a patch from Jeremy Fitzhardinge <jeremy@goop.org>
+	which allows dump on an active ext3 filesystem. However, this
+	is a "quick and dirty" patch which enables backup of an ext3
+	filesystem through the ext2 compatibility (by ignoring the
+	NEEDS_RECOVERY bit). The journal file is not recognized and
+	it is dumped (it should not). 
+
+5.	Test the superblock compatibility flags when dumping, in order
+	to be sure that we know how to deal with specific features.
 
 Changes between versions 0.4b8 and 0.4b9 (released November 5, 1999)
 ====================================================================
